[tool.poetry]
name = "np-exploration-python"
version = "0.1.0"
description = "Template dev container for local Data Science notebooks"
authors = ["Phil Hawkins <phillip.hawkins@nib.com.au>"]
packages = [{include = "np_exploration_python"}]

[tool.poetry.dependencies]
python = "^3.8.10"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
flake8-black = "^0.3.2"
black = "^22.1.0"
ipykernel = "^6.15.2"
asn1crypto = "1.5.1"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
cryptography = "36.0.2"
filelock = "3.8.0"
idna = "3.3"
oscrypto = "1.3.0"
pycparser = "2.21"
pycryptodomex = "3.15.0"
PyJWT = "2.4.0"
pyOpenSSL = "22.0.0"
pytz = "2022.2.1"
requests = "2.28.1"
typing_extensions = "4.3.0"
urllib3 = "1.26.12"
snowflake-connector-python = {extras = ["secure-local-storage", "pandas"], version = "^2.7.12"}
pytest = "^7.1.3"
scikit-learn = "^1.1.2"
jupyter-dash = "^0.4.2"
altair = "^4.2.0"
seaborn = "^0.12.0"
nbformat = "^5.4.0"

[tool.poetry.group.project.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 